--- a/pom.xml
+++ b/pom.xml
@@ -80,10 +80,9 @@
 			<scope>runtime</scope>
 		</dependency>
 		
-		<dependency>
-		    <groupId>com.fasterxml.jackson.dataformat</groupId>
-		    <artifactId>jackson-dataformat-xml</artifactId>
-		    <version>2.10.2</version>
+		<dependency>	
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
 		</dependency>
 	
 		
